# diabetes-knn

./: .gitignore  README.md  flake.nix  pom.xml  pyproject.toml
src/: __init__.py  cli.py  main.py
src/algorithms/: __init__.py  kmeans_imputer.py  knn_classifier.py  knn_imputer.py
src/main/java/de/hft-stuttgart/: App.java
src/main/java/de/hft/stuttgart/: App.java
src/pipeline/: __init__.py  pipeline.py  predictor.py  splitter.py
src/test/java/de/hft-stuttgart/: AppTest.java
src/test/java/de/hft/stuttgart/: AppTest.java
