[tool.poetry]
name = "diabetes-pipeline"
version = "0.1.0"
description = "CLI Pipeline für die Diabetes Fallstudie (HFT Stuttgart)"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
click = "^8.1.0"
rich = "^13.7.0"
numpy = "^1.24.0"

[tool.poetry.scripts]
diabetes-pipeline = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
